--- a/HousingPrice.ipynb
+++ b/HousingPrice.ipynb
@@ -75,6 +75,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "province_list = list()\n",
+    "for item in seoul_code_list:\n",
+    "    if item[0] not in province_list:\n",
+    "        province_list.append(item[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_address(code_list):\n",
     "    address_list = list()\n",
     "    for item in code_list:\n",
@@ -157,22 +169,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# dongCode 추가\n",
+    "# create yeonrib.csv\n",
     "\n",
-    "address_list = get_address(seoul_code_list)\n",
-    "dong_list = list()\n",
-    "for a, row in df2.iterrows():\n",
-    "    for item in address_list:\n",
-    "        if row['지역코드'] == item[0]:\n",
-    "            if row['법정동'] == item[3]:\n",
-    "                dong_list.append(item[2])\n",
-    "\n",
-    "df2['dongCode'] = dong_list"
+    "I'm going to create yeonrib.csv file in seoul at 2017"
    ]
   },
   {
@@ -181,7 +183,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jibunCode 추가\n",
+    "with open('/Users/jungwookim/dev/RealEstateInSeoul/yeonrib.csv', 'a') as f:\n",
+    "    df_temp = pd.DataFrame(columns=df2.columns)\n",
+    "    df_temp.to_csv('yeonrib.csv', index=False)\n",
+    "\n",
+    "    date_set = [str(x) for x in range(201701, 201713)]\n",
+    "    \n",
+    "    for date in date_set:\n",
+    "        for item in province_list:\n",
+    "            try:\n",
+    "                # 여기서 코드는 구까지 있는 5-digits 코드이다.\n",
+    "                data = get_price_yeonrib(item, date)\n",
+    "                dataFrame = pd.DataFrame(data['response']['body']['items']['item'])\n",
+    "                dataFrame.to_csv(f, header=False, columns=dataFrame.columns)\n",
+    "            except:\n",
+    "                continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv('yeonrib.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# make pnu column for mapping in the future\n",
+    "I need to make pnu columns based on 지역코드, 법정동, 지번.\n",
+    "pnu consists of 19 digits which is like 1111010100100520018.\n",
+    "\n",
+    "Let's decompose that into 5+5+1+4+4 digits.\n",
+    "\n",
+    "* For the first 5 digits indicate 지역코드(서울시 종로구): 11110\n",
+    "* next 5 digtis indicate 법정동(청운동): 10100\n",
+    "* next 1 digit indicate register code: 1 (I wouldn't take anything except 1)\n",
+    "* next 4 digits indicate 지번: 0052 of 52-18\n",
+    "* last 4 digits indicate 지번: 0018 of 52-18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add dongCode\n",
+    "\n",
+    "address_list = get_address(seoul_code_list)\n",
+    "dong_list = list()\n",
+    "n = 0\n",
+    "\n",
+    "for m, row in enumerate(df2.itertuples(index=True)):\n",
+    "    for item in address_list:\n",
+    "        if str(getattr(row, \"지역코드\")) in item:\n",
+    "            if getattr(row, \"법정동\") in item:\n",
+    "                dong_list.append(item[2])\n",
+    "                n += 1\n",
+    "    if len(dong_list) != (m + 1):\n",
+    "        dong_list.append(item[2])\n",
+    "        n += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add new columns\n",
+    "df2['dongCode'] = dong_list\n",
+    "\n",
+    "# int to str\n",
+    "df2['지역코드'] = df2['지역코드'].apply(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are some noise from data so I need to remove some NAN data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_nan_rows(df):\n",
+    "    remove_index = list()\n",
+    "    for n, item in enumerate(pd.isnull(df['지번']).values):\n",
+    "        if item:\n",
+    "            remove_index.append(n)\n",
+    "\n",
+    "    print(remove_index, \"의 인덱스 rows가 삭제되었습니다.\")\n",
+    "    df.drop(df.index[remove_index], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_nan_rows(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add jibunCode\n",
     "df2['jibunCode'] = df2['지번'].map(get_jibunCode)"
    ]
   },
@@ -191,8 +310,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 최종 pnu 생성\n",
+    "# create pnu\n",
     "df2['pnu'] = df2['지역코드'] + df2['dongCode'] + '1' + df2['jibunCode']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# create gongdong.csv\n",
+    "\n",
+    "Now, I'm going to create gongdong.csv file. It is much easier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_gongdong_price('1111010100100040007', '2017', '10', '1')\n",
+    "df = pd.DataFrame(df['apartHousingPrices']['field'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/Users/jungwookim/dev/RealEstateInSeoul/gongdong.csv', 'a') as f:\n",
+    "    df_temp = pd.DataFrame(columns=df.columns)\n",
+    "    df_temp.to_csv('gongdong.csv', index=False)\n",
+    "    \n",
+    "    for code in seoul_code_10:\n",
+    "        for page in range(1, 3):\n",
+    "            try:\n",
+    "                data = get_gongdong_price(str(code), '2017', '100', str(page))\n",
+    "                data_frame = pd.DataFrame(data['apartHousingPrices']['field'])\n",
+    "                data_frame.to_csv(f, header=False, index_label = data_frame.columns)\n",
+    "                print(code, page)\n",
+    "            except:\n",
+    "                print(\"{} on {} PAGE NOT FOUND\".format(code, page))\n",
+    "                continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv('gongdong.csv').head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're finally done with preparing data for analysis."
    ]
   }
  ],
